--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --recursive",
+    "sequelize": "npx sequelize",
     "start": "node server.js",
     "seed": "node seeds/index.js",
     "devstart": "nodemon server.js"
@@ -22,7 +23,8 @@
     "handlebars": "^4.7.8",
     "mongoose": "^8.1.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "chai": "^5.0.3",
